# i5DoctoralSeminar2025

./: .gitignore  README.md
code/: README.md
code/toyagent/: .gitignore  Makefile  README.md
code/toyagent/backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
code/toyagent/backend/src/toyagent/: __init__.py  config.py  database.py  main.py
code/toyagent/backend/src/toyagent/api/: __init__.py  deps.py
code/toyagent/backend/src/toyagent/api/routes/: __init__.py  chats.py  stream.py  workflows.py
code/toyagent/backend/src/toyagent/llm/: __init__.py  azure_openai.py  base.py
code/toyagent/backend/src/toyagent/models/: __init__.py  chat.py  message.py  workflow.py
code/toyagent/backend/src/toyagent/schemas/: __init__.py  chat.py  message.py  sse.py  workflow.py
code/toyagent/backend/src/toyagent/services/: __init__.py  chat_service.py  message_service.py  workflow_service.py
code/toyagent/backend/src/toyagent/temporal/: __init__.py  client.py  worker.py
code/toyagent/backend/src/toyagent/temporal/activities/: __init__.py  base.py  email.py  llm.py
code/toyagent/backend/src/toyagent/temporal/workflows/: __init__.py  json_workflow.py
code/toyllm/: pyproject.toml
code/toyllm/src/toyllm/ollama/: chat.py
code/toyllm/src/toyllm/transformers/: inference.py  pretrain.py  transformer.py
code/toymcp/: .env.example  .gitignore  README.md  pyproject.toml
code/toymcp/docs/: 00_overview.md  01_mcp_basics.md  02_stdio_transport.md  03_resources.md  04_tools.md  05_prompts.md  06_sse_transport.md  07_integration.md
code/toymcp/scripts/: .gitignore
code/toymcp/scripts/01_basic_server/: stdio_client.py  stdio_server.py
code/toymcp/scripts/02_resources/: file_resource_client.py  file_resource_server.py
code/toymcp/scripts/02_resources/data/: example1.txt  example2.txt
code/toymcp/scripts/03_tools/: calculator_tool_server.py
code/toymcp/scripts/04_prompts/: prompt_template_server.py
code/toymcp/scripts/05_sse_server/: sse_server.py
code/toymcp/scripts/06_combined/: full_featured_server.py
code/toymcp/src/toymcp/: __init__.py  chat_agent.py  cli.py  client.py  llm_client.py  server.py
docs/development/: github_guidelines.md
slides/: .gitignore  Makefile  main.tex
slides/bibliography/: references.bib  references.bib.example
slides/config/: commands.tex  metadata.tex  preamble.tex
slides/content/: outline.tex
slides/scripts/: clean.sh  compile.sh  setup.sh
slides/styles/: beamercolorthemeRWTH.sty  beamerfontthemeRWTH.sty  beamerinnerthemeRWTH.sty  beamerouterthemeRWTH.sty  beamerthemeRWTH.sty
(+49 files in other folders)
