[project]
name = "toyagent"
version = "0.1.0"
description = "ToyAgent Backend - LLM and AI Agent System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "agents", "llm", "toyagent"]

dependencies = [
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "openai>=1.40.0",
    "temporalio>=1.7.1",
    "exchangelib>=5.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "mypy>=1.18.2",
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
toyagent = "toyagent.main:main"
toyagent-worker = "toyagent.temporal.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toyagent"]

# Ruff settings
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# Black settings
[tool.black]
line-length = 88
target-version = ['py312']

# Pytest settings
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
